--- a/win32/vcxproj/topaz_game.vcxproj
+++ b/win32/vcxproj/topaz_game.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>topaz_game</ProjectName>
+    <ProjectName>jadeite_game</ProjectName>
     <ProjectGuid>{89A19910-84DB-454D-9C7F-0A47A293867B}</ProjectGuid>
     <RootNamespace>topaz_gameserver</RootNamespace>
     <Keyword>Win32Proj</Keyword>
