--- a/win32/vcxproj/topaz_search.vcxproj
+++ b/win32/vcxproj/topaz_search.vcxproj
@@ -69,6 +69,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>topaz_searchserver</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>jadeite_search</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
